<resources>
    <string name="app_name">golove</string>

    <string name="film">电影</string>
    <string name="cinema">影院</string>
    <string name="damai">演出</string>
    <string name="discovery">发现</string>
    <string name="mine">我的</string>

    <string name="loading">正在加载,么么哒~</string>
    <string name="loading_error">小二很忙,系统很累,稍后再试吧</string>
    <string name="refresh">刷新</string>

    <string name="loading_more">哎呦没有出来~在点一次吧</string>
    <string name="no_more_load">哎呦别点了~已经么有了</string>

    <string name="cinema_map">影院地图</string>

    <string name="cancel">取消</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_name">用户名/Email/手机号</string>
    <string name="hint_password">密码</string>

    <string name="user_login">用户登录</string>
    <string name="login">登录</string>
    <string name="error_login_empty">用户名/Email/手机号不能为空</string>
    <string name="error_pswd_empty">密码不能为空</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
